Jan 08 2006  devel  Started newcore client development (Current client code
                     is demo only and will not do anything useful)
                    Changed menu drivers to go to menubar mode and allow
                     picking the menu by underlined key
Dec 29 2005  devel  Added runstate loaders to kismet_server (do not use yet)
                    Added runstate support to gpsxml
                    Added runstate logging to netracker
                    Added runstate loading to netracker
                    Added runstate net totals logging/loading
                    Runstate loading should be usable
Dec 28 2005  devel  Added runstate dumpfile framework for freezing the Kismet
                     running state
                    Tweaked runstate dumpfile parsing
                    Added bcm43xx source
                    Started adding dumpfile resume code
Dec 21 2005  devel  Fixed error in netframe caching
Dec 19 2005  devel  Added dynamic source creation/removal via ADDSOURCE and
                     DELSOURCE commands
Dec 18 2005  devel  Fixed drone starting if drone server doesn't start
                    Added --source-options command line switch
Dec 16 2005  devel  Fixed vector resize with uclibc++
                    Added uclibc++ autodetect in autoconf
                    Added libm autodetect in autoconf
                    Removed const qualifier in macaddr.h to allow compiling on
                     uclibc c++
Dec 15 2005  devel  Added remote drone name to messages passed from it
                    Fixed drone stream syncing problem which caused sentinel
                     errors
                    Fixed compilation error when libpcap disabled
Dec 14 2005  devel  Fixed queuing of dumpfiles when dumping is disabled
Dec 13 2005  devel  Fixed loading of servername in server/drone
                    Restored wrt54prism capture source for OpenWRT
                    Fixed packet processing loop in packetsource_drone